# weather_pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
dags/: weather_pipeline.py
data/processed/: transformed_weather_data_20250708_011036.csv
data/raw/: weather_data_20250708_011034.json
src/weather_pipeline/: config.py  main.py  weather_pipeline.py
src/weather_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/weather_pipeline/dags/: weather_dag.py
tests/: test_main.py  test_smoke.py
