[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-pipeline"
version = "0.1.0"
description = "Production-ready weather ETL pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Seu Nome", email = "seu@email.com"}
]
dependencies = [
  "requests>=2.31",
  "pandas>=2.1",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "structlog>=23.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "pre-commit>=3.5",
  "bandit[toml]>=1.7",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C90", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.bandit]
exclude_dirs = ["tests"]
